# TabZero

./: .env.example  .gitignore  .vercelignore  README.md  background.js  content.js  eslint.config.mjs  manifest.json  package-lock.json  package.json  popup.css  popup.html  popup.js  proxy.ts  reset.html  supabase.js  tailwind.config.ts  tsconfig.json
.github/workflows/: release.yml
app/: globals.css  layout.tsx  page.tsx
app/api/analyze-tabs/: route.ts
app/auth/callback/: route.ts
app/auth/signout/: route.ts
app/dashboard/: page.tsx
app/download/: page.tsx
app/extension-disclosures/: page.tsx
app/login/: page.tsx
app/new/: page.tsx
app/privacy/: page.tsx
app/share/[slug]/: page.tsx
app/support/: page.tsx
app/terms/: page.tsx
app/workspace/[id]/: page.tsx
components/: FeatureDemos.tsx  Footer.tsx  Header.tsx  LegalPage.tsx  LoginForm.tsx  ProductMock.tsx  Reveal.tsx  WorkspaceView.tsx  ui.tsx
desktop/: .gitignore  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/ui/: index.html
extension/: index.html  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/scripts/: copy-manifest.mjs
extension/src/: background.ts  content.ts
extension/src/lib/: api.ts  (+2 more)
lib/: http.ts  ids.ts  markdown.ts  storage.ts  supabase.ts  types.ts  utils.ts
lib/analyzer/: categorize.ts  gemini.ts  index.ts  mock.ts  openai.ts  prompt.ts  shared.ts
lib/auth/: client.ts  config.ts  middleware.ts  server.ts
(+7 files in other folders)
