[package]
name = "tabzero"
version = "0.1.0"
description = "TabZero desktop"
authors = ["Nihar"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tabzero_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
